fixed issue with z index where legend covered clickable UI elements and added La Honda ride

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,11 @@
 } 
 */
 
+/* make the legend display underneath UI elements like elevation and layer control */
+.leaflet-bottom.leaflet-right {
+  z-index: 800 !important;
+
+}
 
 .legend {
   line-height: 25px;
